--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/uuid": "^8.3.4",
     "axios": "^0.25.0",
     "discord.js": "^13.6.0",
     "dotenv": "^12.0.3",
